# wasm_portfolio

./: .gitignore  .ignore  .pylintrc  CNAME  Cargo.toml  Dockerfile  Rocket.toml  class_history.md  package-lock.json  temp
back/: Cargo.toml
back/src/: catchers.rs  main.rs  response.rs  routes.rs
back/src/routes/: bots.rs
front/: Cargo.toml
front/resources/i18n/: en.json  fr.json
front/resources/shaders/: circle.frag  circle.vert  rect.frag  rect.vert
front/src/: app.rs  basic.frag  lib.rs  main.rs  render.rs  utils.rs
front/src/component/: age.rs  git_projects.rs  header.rs  hidable.rs  light_switch.rs  locale_switch.rs  mod.rs  notification.rs  theme_switch.rs  wormgrid.rs
front/src/component/wormgrid/: worm.rs
front/src/maths/: collision.rs  line.rs  mod.rs  point.rs
front/src/maths/rect/: cache.rs  inner.rs  mod.rs
front/src/render/: color.rs
front/src/scene/: contatct.rs  gitrepos.rs  home.rs  internships.rs  mod.rs  not_found.rs  projects.rs  storage_server.rs  void.rs  wasm.rs
scripts/: build.sh  build_back.sh  build_front.sh  clean.sh  dependency_checker.py  docker_build.sh  minify_css.py  watch_front.sh
static/: front.js  front_bg.wasm  gitcard.css  index.html  robots.txt  sitemap.xml  style.css  theme.css  worms.css
static/css/: base_theme.css  contact.css  gitcard.css  header.css  hidable.css  home.css  locale_switch.css  not_found.css  presentation.css  style.css  theme.css  theme_switch.css  void.css  wasm.css  worms.css
static/lib/hidable/: hidable.js
static/lib/live/: live.js
static/lib/prism/: _prism-autoloader.min.js  custom.css  gruvbox-dark.css  prism-rust.min.js  prism.css  prism_theme.css  synthwave84.css  xonokai.css
static/lib/zoom/: zoom.css  zoom.js
static/resources/i18n/: README.md  fr.json
