[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
logger = { git = "https://github.com/Bowarc/Crates.git", package = "logger" }
rocket = { version = "0.5.0", features = ["json"] }
shared = { path = "../shared" }
log.workspace = true