[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
random = {git = "https://github.com/bowarc/Crates", package = "random"}
time = {git = "https://github.com/bowarc/Crates", package = "time"}
maths = {git = "https://github.com/bowarc/Crates", package = "maths"}
gloo = "0.11.0"
js-sys = "0.3.66"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = { version = "0.2.89"}
wasm-bindgen-futures = "0.4.39"
wasm-timer = "0.2.5"
serde_json = "1.0.111"
serde = { version = "1.0.194", features = ["derive"] }
futures = "0.3.30"
# wasm-bindgen-futures = "0.4.39"
# shared = { path = "../shared"}
# serde_json = "1.0.111"
# gloo-utils = { version = "0.1", features = ["serde"] }
# mem = { git = "https://github.com/bowarc/Crates" , package = "mem"}


[dependencies.web-sys]
version = "0.3.66"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
