[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
random = {git = "https://github.com/bowarc/Crates", package = "random"}
time = {git = "https://github.com/bowarc/Crates", package = "time"}
math = {git = "https://github.com/bowarc/Crates", package = "math"}
gloo = "0.11.0" # Yew depends on this version
js-sys = "0.3.68"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = { version = "0.2.93"}
wasm-bindgen-futures = "0.4.41"
wasm-timer = "0.2.5"
serde_json = "1.0.111"
serde = { version = "1.0.194", features = ["derive"] }
futures = "0.3.30"
gloo-timers = { version = "0.3.0", features = ["futures"] }
# wasm-bindgen-futures = "0.4.39"
# serde_json = "1.0.111"
# gloo-utils = { version = "0.1", features = ["serde"] }
# mem = { git = "https://github.com/bowarc/Crates" , package = "mem"}


[dependencies.web-sys]
version = "0.3.68"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
